--- a/modelcreation.ipynb
+++ b/modelcreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -33,12 +33,13 @@
     "nltk.download('omw-1.4')\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "import string"
+    "import string\n",
+    "from transformers import BertTokenizer, TFBertForSequenceClassification\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +125,7 @@
        "4  im getting on borderlands 2 and i will murder ...  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +223,7 @@
        "4  Now the President is slapping Americans in the...  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,78 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sentiment</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Positive</td>\n",
-       "      <td>im getting on borderlands and i will murder yo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Positive</td>\n",
-       "      <td>I am coming to the borders and I will kill you...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Positive</td>\n",
-       "      <td>im getting on borderlands and i will kill you ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Positive</td>\n",
-       "      <td>im coming on borderlands and i will murder you...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Positive</td>\n",
-       "      <td>im getting on borderlands 2 and i will murder ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  sentiment                                               text\n",
-       "0  Positive  im getting on borderlands and i will murder yo...\n",
-       "1  Positive  I am coming to the borders and I will kill you...\n",
-       "2  Positive  im getting on borderlands and i will kill you ...\n",
-       "3  Positive  im coming on borderlands and i will murder you...\n",
-       "4  Positive  im getting on borderlands 2 and i will murder ..."
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_train = df_train.rename(columns={3:'text'})\n",
     "df_train = df_train.rename(columns={2:'sentiment'})"
@@ -322,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +263,7 @@
        "686"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +417,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>im getting borderland murder</td>\n",
+       "      <td>[im, getting, borderland, murder]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -493,7 +425,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>coming border kill</td>\n",
+       "      <td>[coming, border, kill]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -501,7 +433,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>im getting borderland kill</td>\n",
+       "      <td>[im, getting, borderland, kill]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -509,7 +441,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>im coming borderland murder</td>\n",
+       "      <td>[im, coming, borderland, murder]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -517,7 +449,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>im getting borderland 2 murder</td>\n",
+       "      <td>[im, getting, borderland, 2, murder]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -528,28 +460,104 @@
        "</div>"
       ],
       "text/plain": [
-       "                             text  sentiment_Irrelevant  sentiment_Negative  \\\n",
-       "0    im getting borderland murder                     0                   0   \n",
-       "1              coming border kill                     0                   0   \n",
-       "2      im getting borderland kill                     0                   0   \n",
-       "3     im coming borderland murder                     0                   0   \n",
-       "4  im getting borderland 2 murder                     0                   0   \n",
+       "                                   text  sentiment_Irrelevant  \\\n",
+       "0     [im, getting, borderland, murder]                     0   \n",
+       "1                [coming, border, kill]                     0   \n",
+       "2       [im, getting, borderland, kill]                     0   \n",
+       "3      [im, coming, borderland, murder]                     0   \n",
+       "4  [im, getting, borderland, 2, murder]                     0   \n",
        "\n",
-       "   sentiment_Neutral  sentiment_Positive  \n",
-       "0                  0                   1  \n",
-       "1                  0                   1  \n",
-       "2                  0                   1  \n",
-       "3                  0                   1  \n",
-       "4                  0                   1  "
+       "   sentiment_Negative  sentiment_Neutral  sentiment_Positive  \n",
+       "0                   0                  0                   1  \n",
+       "1                   0                  0                   1  \n",
+       "2                   0                  0                   1  \n",
+       "3                   0                  0                   1  \n",
+       "4                   0                  0                   1  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6220b75eeac4653b25baf2e5c2cc3c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)solve/main/vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Assistant\\anaconda3\\envs\\dev\\lib\\site-packages\\huggingface_hub\\file_download.py:133: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Assistant\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9c1540df6d24e6f9f2232e1b19a88bd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)okenizer_config.json:   0%|          | 0.00/28.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b30e8276d144e92bf594c2b3e040888",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)lve/main/config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "\nTFBertForSequenceClassification requires the TensorFlow library but it was not found in your environment.\nHowever, we were able to find a PyTorch installation. PyTorch classes do not begin\nwith \"TF\", but are otherwise identically named to our TF classes.\nIf you want to use PyTorch, please use those classes instead!\n\nIf you really do want to use TensorFlow, please follow the instructions on the\ninstallation page https://www.tensorflow.org/install that match your environment.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Assistant\\OneDrive - LEISHMAN FINANCIAL SERVICES PTY LTD\\Desktop\\temp\\Dev\\Sentiment-Analysis\\modelcreation.ipynb Cell 15\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Assistant/OneDrive%20-%20LEISHMAN%20FINANCIAL%20SERVICES%20PTY%20LTD/Desktop/temp/Dev/Sentiment-Analysis/modelcreation.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mbert-base-uncased\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Assistant/OneDrive%20-%20LEISHMAN%20FINANCIAL%20SERVICES%20PTY%20LTD/Desktop/temp/Dev/Sentiment-Analysis/modelcreation.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m tokenizer \u001b[39m=\u001b[39m BertTokenizer\u001b[39m.\u001b[39mfrom_pretrained(model_name)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Assistant/OneDrive%20-%20LEISHMAN%20FINANCIAL%20SERVICES%20PTY%20LTD/Desktop/temp/Dev/Sentiment-Analysis/modelcreation.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m model \u001b[39m=\u001b[39m TFBertForSequenceClassification\u001b[39m.\u001b[39;49mfrom_pretrained(model_name)\n",
+      "File \u001b[1;32mc:\\Users\\Assistant\\anaconda3\\envs\\dev\\lib\\site-packages\\transformers\\utils\\import_utils.py:1112\u001b[0m, in \u001b[0;36mDummyObject.__getattribute__\u001b[1;34m(cls, key)\u001b[0m\n\u001b[0;32m   1110\u001b[0m \u001b[39mif\u001b[39;00m key\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m key \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m_from_config\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m   1111\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__getattribute__\u001b[39m(key)\n\u001b[1;32m-> 1112\u001b[0m requires_backends(\u001b[39mcls\u001b[39;49m, \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49m_backends)\n",
+      "File \u001b[1;32mc:\\Users\\Assistant\\anaconda3\\envs\\dev\\lib\\site-packages\\transformers\\utils\\import_utils.py:1095\u001b[0m, in \u001b[0;36mrequires_backends\u001b[1;34m(obj, backends)\u001b[0m\n\u001b[0;32m   1093\u001b[0m \u001b[39m# Raise the inverse error for PyTorch users trying to load TF classes\u001b[39;00m\n\u001b[0;32m   1094\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mtf\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m backends \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mtorch\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m backends \u001b[39mand\u001b[39;00m is_torch_available() \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m is_tf_available():\n\u001b[1;32m-> 1095\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(TF_IMPORT_ERROR_WITH_PYTORCH\u001b[39m.\u001b[39mformat(name))\n\u001b[0;32m   1097\u001b[0m checks \u001b[39m=\u001b[39m (BACKENDS_MAPPING[backend] \u001b[39mfor\u001b[39;00m backend \u001b[39min\u001b[39;00m backends)\n\u001b[0;32m   1098\u001b[0m failed \u001b[39m=\u001b[39m [msg\u001b[39m.\u001b[39mformat(name) \u001b[39mfor\u001b[39;00m available, msg \u001b[39min\u001b[39;00m checks \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m available()]\n",
+      "\u001b[1;31mImportError\u001b[0m: \nTFBertForSequenceClassification requires the TensorFlow library but it was not found in your environment.\nHowever, we were able to find a PyTorch installation. PyTorch classes do not begin\nwith \"TF\", but are otherwise identically named to our TF classes.\nIf you want to use PyTorch, please use those classes instead!\n\nIf you really do want to use TensorFlow, please follow the instructions on the\ninstallation page https://www.tensorflow.org/install that match your environment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = \"bert-base-uncased\"\n",
+    "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "model = TFBertForSequenceClassification.from_pretrained(model_name)"
    ]
   },
   {
