--- a/old/textpreprocessing.ipynb
+++ b/old/textpreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "import string\n"
+    "import string\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,16 +24,16 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Assistant\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\gello\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Assistant\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\gello\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\Assistant\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\gello\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\Assistant\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\gello\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     },
@@ -42,7 +43,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
        "4  im getting on borderlands 2 and i will murder ...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +241,7 @@
        "4  Now the President is slapping Americans in the...  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Negative      22808\n",
+       "Positive      21109\n",
+       "Neutral       18603\n",
+       "Irrelevant    13162\n",
+       "Name: 2, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exploratory Data Analysis:\n",
+      "________________________________\n",
+      "Negative      22808\n",
+      "Positive      21109\n",
+      "Neutral       18603\n",
+      "Irrelevant    13162\n",
+      "Name: 2, dtype: int64\n",
+      "________________________________\n",
+      "Average Length: 109.10131206997707\n",
+      "Standard Deviation of Length: 79.61342966458318\n",
+      "Max:  957.0\n",
+      "Min:  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "column_name = 3\n",
+    "\n",
+    "average_length = df[column_name].str.len().mean()\n",
+    "std_dev_length = df[column_name].str.len().std()\n",
+    "max = df[3].str.len().max()\n",
+    "min = df[3].str.len().min()\n",
+    "\n",
+    "df[2].value_counts()\n",
+    "print(\"Exploratory Data Analysis:\")\n",
+    "print(\"________________________________\")\n",
+    "print(df[2].value_counts())\n",
+    "print(\"________________________________\")\n",
+    "print(\"Average Length:\", average_length)\n",
+    "print(\"Standard Deviation of Length:\", std_dev_length)\n",
+    "print(\"Max: \", max)\n",
+    "print(\"Min: \", min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
