--- a/old/Example model.ipynb
+++ b/old/Example model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,10 +49,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2120</th>\n",
-       "      <td>33841</td>\n",
-       "      <td>@JetBlue wonderful gate agent in Orlando total...</td>\n",
-       "      <td>1</td>\n",
+       "      <th>580</th>\n",
+       "      <td>3254</td>\n",
+       "      <td>@VirginAmerica Flight 938 had a three hour del...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>331</th>\n",
@@ -61,22 +61,22 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2967</th>\n",
-       "      <td>125940</td>\n",
-       "      <td>@SouthwestAir ... Any aviation incident is sad...</td>\n",
+       "      <th>2737</th>\n",
+       "      <td>98827</td>\n",
+       "      <td>Delta &amp;gt; @united // @AmericanAir &amp;gt; @unite...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>254</th>\n",
-       "      <td>166931</td>\n",
-       "      <td>@united sitting on the Tarmac for 2 hr 35 minu...</td>\n",
-       "      <td>0</td>\n",
+       "      <th>3199</th>\n",
+       "      <td>150838</td>\n",
+       "      <td>@Unclekage @united i hope theres wine enough. ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1311</th>\n",
-       "      <td>31475</td>\n",
-       "      <td>Had the worst service ever on @VirginAmerica o...</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2875</th>\n",
+       "      <td>115958</td>\n",
+       "      <td>Can't wait to fly @SouthwestAir to Dallas. Ã¢Å...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -84,14 +84,14 @@
       ],
       "text/plain": [
        "          id                                              tweet  label\n",
-       "2120   33841  @JetBlue wonderful gate agent in Orlando total...      1\n",
+       "580     3254  @VirginAmerica Flight 938 had a three hour del...      0\n",
        "331   161845  .@Delta I had the worst night of my life trave...      0\n",
-       "2967  125940  @SouthwestAir ... Any aviation incident is sad...      1\n",
-       "254   166931  @united sitting on the Tarmac for 2 hr 35 minu...      0\n",
-       "1311   31475  Had the worst service ever on @VirginAmerica o...      0"
+       "2737   98827  Delta &gt; @united // @AmericanAir &gt; @unite...      1\n",
+       "3199  150838  @Unclekage @united i hope theres wine enough. ...      1\n",
+       "2875  115958  Can't wait to fly @SouthwestAir to Dallas. Ã¢Å...      1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,29 +160,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2758</th>\n",
-       "      <td>105650</td>\n",
-       "      <td>.@AmericanAir such a big company, and been on ...</td>\n",
+       "      <th>4376</th>\n",
+       "      <td>165805</td>\n",
+       "      <td>@AmericanAir Another horrible experience on AA...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>630</th>\n",
-       "      <td>24834</td>\n",
-       "      <td>@southwestair I just left my brand new @BillyB...</td>\n",
+       "      <th>4020</th>\n",
+       "      <td>153419</td>\n",
+       "      <td>Best prt abt @united: They never update your d...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4118</th>\n",
-       "      <td>157027</td>\n",
-       "      <td>How Disgusting @united That You Kicked Off A K...</td>\n",
+       "      <th>2368</th>\n",
+       "      <td>90688</td>\n",
+       "      <td>@theben03 @AmericanAir @Iberia they lost your ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2492</th>\n",
-       "      <td>95327</td>\n",
-       "      <td>Do you ever suspect @united is bad with timezo...</td>\n",
+       "      <th>774</th>\n",
+       "      <td>30906</td>\n",
+       "      <td>@sorryimalex @AmericanAir rude</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>639</th>\n",
-       "      <td>25325</td>\n",
-       "      <td>@Chase please hurry up to offer chip-version o...</td>\n",
+       "      <th>3355</th>\n",
+       "      <td>127067</td>\n",
+       "      <td>#virginamerica please just take me home. Still...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,14 +190,14 @@
       ],
       "text/plain": [
        "          id                                              tweet\n",
-       "2758  105650  .@AmericanAir such a big company, and been on ...\n",
-       "630    24834  @southwestair I just left my brand new @BillyB...\n",
-       "4118  157027  How Disgusting @united That You Kicked Off A K...\n",
-       "2492   95327  Do you ever suspect @united is bad with timezo...\n",
-       "639    25325  @Chase please hurry up to offer chip-version o..."
+       "4376  165805  @AmericanAir Another horrible experience on AA...\n",
+       "4020  153419  Best prt abt @united: They never update your d...\n",
+       "2368   90688  @theben03 @AmericanAir @Iberia they lost your ...\n",
+       "774    30906                     @sorryimalex @AmericanAir rude\n",
+       "3355  127067  #virginamerica please just take me home. Still..."
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,21 +227,12 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "\n",
-    "if torch.cuda.is_available():       \n",
-    "    device = torch.device(\"cuda\")\n",
-    "    print(f'There are {torch.cuda.device_count()} GPU(s) available.')\n",
-    "    print('Device name:', torch.cuda.get_device_name(0))\n",
-    "\n",
-    "else:\n",
-    "    print('No GPU available, using the CPU instead.')\n",
-    "    device = torch.device(\"cpu\")"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +240,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Assistant\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\gello\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -292,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 6.8 s\n",
-      "Wall time: 45.6 s\n"
+      "CPU times: total: 12.9 s\n",
+      "Wall time: 12.9 s\n"
      ]
     }
    ],
@@ -322,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +517,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Assistant\\anaconda3\\envs\\dev\\lib\\site-packages\\transformers\\tokenization_utils_base.py:2364: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+      "c:\\Users\\gello\\anaconda3\\envs\\dev\\lib\\site-packages\\transformers\\tokenization_utils_base.py:2364: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
       "  warnings.warn(\n"
      ]
     }
@@ -548,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,15 +565,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 78.1 ms\n",
-      "Wall time: 1.02 s\n"
+      "CPU times: total: 219 ms\n",
+      "Wall time: 268 ms\n"
      ]
     }
    ],
@@ -647,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,17 +813,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "c:\\Users\\Assistant\\anaconda3\\envs\\dev\\lib\\site-packages\\transformers\\optimization.py:407: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "c:\\Users\\gello\\anaconda3\\envs\\dev\\lib\\site-packages\\transformers\\optimization.py:407: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n"
      ]
     },
@@ -843,7 +834,9 @@
       "Start training...\n",
       "\n",
       " Epoch  |  Batch  |  Train Loss  |  Val Loss  |  Val Acc  |  Elapsed \n",
-      "----------------------------------------------------------------------\n"
+      "----------------------------------------------------------------------\n",
+      "   1    |   20    |   0.658865   |     -      |     -     |  3502.45 \n",
+      "   1    |   40    |   0.587946   |     -      |     -     |  3880.15 \n"
      ]
     }
    ],
